# myCalendar

./: .gitignore  manage.py  pyproject.toml
event/: models.py  urls.py  views.py
myCalendar/: asgi.py  settings.py  urls.py  wsgi.py
