[tool.poetry]
name = "mycalendar"
version = "0.1.0"
description = ""
authors = ["kidsage <ruhyun92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
